k8s-do/heritageflix-modemuze-periodes/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: heritageflix-modemuze-periodes
spec:
  replicas: 1
  selector:
    matchLabels:
      app: heritageflix-modemuze-periodes
  template:
    metadata:
      labels:
        app: heritageflix-modemuze-periodes
    spec:
      containers:
        - name: app
          image: ghcr.io/netwerk-digitaal-erfgoed/heritageflix-modemuze-periodes
          ports:
            - containerPort: 3000
      imagePullSecrets:
        - name: ghcr
