k8s-do/heritageflix-modemuze-periodes/service.yml
apiVersion: v1
kind: Service
metadata:
  name: heritageflix-modemuze-periodes
spec:
  ports:
    - port: 80
      targetPort: 3000
  selector:
    app: heritageflix-modemuze-periodes
