k8s-do/heritageflix-modemuze-periodes/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: heritageflix-modemuze-periodes
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - heritageflix-modemuze-periodes.demo.netwerkdigitaalerfgoed.nl
      secretName: heritageflix-modemuze-periodes-tls
  rules:
    - host: heritageflix-modemuze-periodes.demo.netwerkdigitaalerfgoed.nl
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: heritageflix-modemuze-periodes
                port:
                  number: 80
